# SpectrumIA

./: .dockerignore  .env.example  .env.production.example  .github_workflows_setup.sh  .gitignore  .pre-commit-config.yaml  00_START_HERE.txt  2_calibration_FIXED.py  3_assessment_FIXED.py  3_assessment_FIXED_CONTINUOUS_COLLECTION.py  4_results_FIXED.py  APPLY_FIX_INSTRUCTIONS.txt  ASSESSMENT_CONTINUOUS_COLLECTION_FIX.md  AUTHENTICATION_CHANGES.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_README.md  AUTHENTICATION_SYSTEM.md  AUTHENTICATION_SYSTEM_DIAGRAM.md  AUTH_FIX_SUMMARY.md  AUTH_SYSTEM_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  BUGFIX_FACE_DETECTOR.md  BUG_FIX_REPORT_2024_04_08.md  CALIBRATION_ASSESSMENT_SYNC_FIX.md  CALIBRATION_DEBUG_GUIDE.md  CALIBRATION_IMPLEMENTATION_PLAN.md  CALIBRATION_TROUBLESHOOTING.md  CHANGELOG_AUTHENTICATION.md  CHANGES_SUMMARY.md  CICD_SETUP_GUIDE.md  CODE_REVIEW_2026-04-09.md  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  DOCUMENTATION_INDEX.md  Dockerfile  ERROR_REPORT.md  EXECUTIVE_SUMMARY_PT.md  FILES_PROVIDED.txt  FIXES_APPLIED.md  FIX_CALIBRATION_ASSESSMENT_ERRORS.md  (+62 more)
.github/: CODEOWNERS
.github/workflows/: build.yml  code-quality.yml  monitoring.yml  tests.yml
app/: main.py
app/pages/: assessment.py  calibration.py  results.py
core/: __init__.py  auth.py  calibration.py  config.py  face_detection.py  feature_extraction.py  gaze_estimation.py  multimodal_fusion.py  pdf_report.py  prometheus_metrics.py  questionnaires.py  utils.py
models/: database.py  rls_policies.sql  schemas.py
monitoring/prometheus/: alert_rules.yml
pages/: 0_home.py  1_login.py  2_Calibration.py  3_Assessment.py  4_Results.py  5_Assessment_Continuous.py  5_questionnaires.py  6_phenotype.py
scripts/: pre_deploy_check.py  test_phase8_1.py  validate_phase8_1.py
stimuli/: generate_placeholders.py  stimuli_config.py
tests/: test_auth_session_isolation.py  test_core_processing.py  test_database.py  test_feature_extraction.py  test_performance.py  test_schemas.py  test_streamlit_pages.py  validate_core.py
